# CoolSockets

./: .gitignore  CMakeLists.txt  Main.c  README.md  Testing.c
examples/: Client.c  Server.c  ServerCallbacks.c
include/: CoolSockets.h
source/linux/: CoolSockets.c
source/mac/: CoolSockets.c
source/windows/: CoolSockets.c
